# reactors_czlab

./: .gitignore  README.md  opc_server.py  pruebita.py  pyproject.toml  simple_server.py  space.tree  test.csv
reactors_czlab/: __init__.py  actuator.py  dictlist.py  export_data.py  opc_server.py  run_client.py  run_plots.py  run_server.py  sensor.py  server_info.py  server_vars.json  simple_server.py
reactors_czlab/app/: calibration.py  opcworker.py
reactors_czlab/core/: __init__.py  actuator.py  control.py  data.py  dictlist.py  modbus.py  modbus_handler.py  reactor.py  sensor.py  sensor_address_update.py  sensor_reader.py  utils.py
reactors_czlab/opcua/: __init__.py  actuator.py  client.py  reactor.py  sensor.py
reactors_czlab/sql/: Bioreactor.sql  file_export.py  insert_data.py  operations.py  plots.py  readme.md  sql_client  sql_client.sql
scripts/: browse_address_space.py  browse_hash.py  hamilton_calibration.py  hamilton_calibration_modbus.py  hamilton_ph_calibration.py  sensor_address_update.py
test_plc/: test_analog_io.py  test_hamilton.py  test_modbus_client.py  test_modbus_server.py  test_server.py
tests/: test_actuator.py  test_client.py  test_plots.py  test_reactor.py  test_sensor.py  test_server.py
tests_plc/: test_as7341.py  test_hamilton.py  test_hamilton_simple.py  test_i2c.py  test_led.py  test_modbus_client.py  test_modbus_server.py  test_plc_actuator.py  test_pwm.py  test_rs485.sh  test_server.py
