[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
requires-python = ">=3.10"
name = "reactors_czlab"
version = "2025.0.0"
description = "Bioreactor control module"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Alexis Saldivar", email = "asaldivarg93@gmail.com" },
    { name = "Bhavana Palapati", email = "bpalapati0099@sdsu.edu" },
]
dependencies = ["asyncua>=1.1.5"]

[project.optional-dependencies]
server = [
    "pymodbus>=3.8.6",
    "pyserial>=3.5",
    "adafruit-circuitpython-busdevice",
    "adafruit-circuitpython-tca9548a",
    "adafruit-circuitpython-as7341",
]
client = [
    "opcua-client>=0.8.4",
    "psycopg>=3.2.7",
    "ipykernel>=6.29.5",
    "polars>=1.29.0",
    "matplotlib",
]
